--- a/前端学习/demo.html
+++ b/前端学习/demo.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<!--设置当前页面主要文字-->
-<html lang="zh-CN">
+<html lang="en">
 
 <head>
     <title></title>
+    <style>
+        .box {
+            background-color:red;
+        }
+    </style>
     <meta charset="UTF-8">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-
+    <div class="box wrap">
+        
+    </div>
 </body>
 
 </html>
