--- a/前端学习/demo.html
+++ b/前端学习/demo.html
@@ -1,21 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
-    <title></title>
-    <style>
-        .box {
-            background-color:red;
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <style type="text/css">
+        * {padding: 0;margin: 0;}
+        .head, .nav, .main, .footer {
+            background-color: silver;
+            border: 1px solid teal;
+            margin-bottom: 10px;
+            width: 1190px;
+            margin: 0 auto 10px auto;
+        } 
+        .header, .footer {
+            height: 100px;
+        }
+        .nav, .main {
+            height: 300px;
+            float: left;
+        }
+        .nav {
+            width: 200px;
+
         }
     </style>
-    <meta charset="UTF-8">
-    <link href="css/style.css" rel="stylesheet">
 </head>
-
 <body>
-    <div class="box wrap">
-        
-    </div>
+    <div class="head">head</div>
+    <div class="nav">nav</div>
+    <div class="main">main</div>
+    <div class="footer">footer</div>
 </body>
-
 </html>
